# convius-backend-task-eugene-sternin

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  env.example  mypy.ini  pyproject.toml  railway.toml  start.sh
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-cd.yml  deploy.yml  test.yml
alembic/: env.py
alembic/versions/: 2d4f350656a8_add_string_constraints_and_indexes_for_.py  2d8201e94556_add_is_active_field_to_restaurants_for_.py  54ef7027dfd6_remove_old_vote_table.py  810b3300f3e1_add_weighted_voting_system_to_vote_.py  d6344313dac7_add_vote_session_architecture.py  initial_migration.py
app/: main.py
app/api/: deps.py
app/api/v1/: api.py
app/api/v1/endpoints/: auth.py  health.py  metrics.py  restaurants.py  vote_sessions.py  votes.py
app/core/: config.py  logging.py  middleware.py  rate_limiter.py  security.py
app/crud/: __init__.py  base.py  crud_restaurant.py  crud_user.py  crud_vote.py  crud_vote_participation.py  crud_vote_session.py
app/db/: session.py
app/models/: __init__.py  models.py
app/schemas/: __init__.py  restaurant.py  user.py  vote.py  vote_session.py
scripts/: deploy.sh  health_check.sh  init-db.sql
tests/: conftest.py  test_auth.py  test_restaurants.py  test_vote_sessions.py  test_voting.py
